testsuite/tests/parser/should_fail/T20385A.hs
{-# LANGUAGE ScopedTypeVariables #-}

import Prelude

{-# LANGUAGE RecursiveDo #-}

main = pure ()

foo :: forall a. a -> a
foo x = mdo x
