testsuite/tests/parser/should_fail/T20385A.stderr

T20385A.hs:5:1: warning: [GHC-28007] [-Wmisplaced-pragmas (in -Wdefault)]
    Misplaced LANGUAGE pragma
    Suggested fix:
      Perhaps you meant to place it in the module header?
      The module header is the section at the top of the file, before the ‘module’ keyword

T20385A.hs:10:9: error: [GHC-88464]
    Variable not in scope: mdo :: a -> a
    Suggested fixes:
      • Perhaps use ‘mod’ (imported from Prelude)
      • Perhaps you intended to use the ‘RecursiveDo’ extension
